# eventsourcer

./: .travis.yml  Makefile  README.md  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: conf.py  index.rst
docs/diagrams/: eventstore.plantuml
eventsourcer/: __init__.py  cli.py  event.py  event_store.py  eventstore.py  list_event_store.py
eventsourcer/examples/: example1.py
eventsourcer/persistence/: eventstore.py  listeventstore.py
sandbox/: es.py  events.py  orders.py  orders1.py  orders2.py  orders_es.py
tests/: test_event_class.py  test_eventsourcer.py  test_list_event_store.py
tests/eventsourcer/: test_event.py
tests/eventsourcer/persistence/: test_eventstore.py  test_listeventstore.py
