# For file format see: https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
[metadata]
name = eventsourcer
version = 0.1.1
description = Python Eventsourcing
long_description = file: README.rst, HISTORY.rst
author = Ivan Georgiev
author_email = ivan.georgiev@gmail.com
url = https://github.com/ivangeorgiev/eventsourcer
keywords = event sourcing
license = GNU General Public License v3
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
packages =
    eventsourcer

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[tool:pytest]
addopts =
    -v
markers =
	system: mark a test as system test
	unit: mark a test as unit test

[bumpversion]
current_version = 0.1.1
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:setup.cfg]
search = version = {current_version}
replace = version = {new_version}

[bumpversion:file:eventsourcer/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'
